# p2cord

./: DOCKER.md  GEMINI.md  README.md  cargo_check_output.txt  frontend_log.txt  output.txt  output_embed.txt  output_embed_2.txt  output_gateway.txt  package-lock.json  package.json  tailwind.config.js
docs/: AI_SUMMARY.md  ARCHITECTURE.md  CURRENT_STATUS_JP.md  DEV_GUIDELINE.md  ROADMAP.md
docs/archive/: P2Cord 開発・改善ガイドライン.md  アーキテクチャ再設計指針.md  チャンネル切り替えのレスポンス改善案.md
signaling-server/: server.js
src/: App.tsx
src-tauri/: Cargo.toml  build_output.txt  check_final.txt  check_log.txt  check_log_main.txt  check_out.txt  error.txt  out.txt  tauri.conf.json
src-tauri/src/: database.rs  discord.rs  gateway.rs  lib.rs  main.rs
src-tauri/src/bridge/: capture.rs  gateway.rs  identity.rs  media.rs  mod.rs  room.rs  social.rs  system.rs
src-tauri/src/p2d/: mod.rs
src-tauri/src/services/: desktop.rs  guild_state.rs  mod.rs  models.rs  state.rs
src-tauri/src/services/identity/: mod.rs
src-tauri/src/services/media/: mod.rs
src-tauri/src/services/media/p2d/: audio.rs  mod.rs  session.rs  signaling.rs
src-tauri/src/services/social/: mod.rs
src-tauri/src/store/: mod.rs
src/components/: ChannelChat.tsx  DMList.tsx  MemberSidebar.tsx  MentionPicker.tsx  MonitorPicker.tsx  QualitySettings.tsx  RoomView.tsx  SlashCommandPicker.tsx  VoiceLayout.tsx
src/hooks/: useWebRTC.ts  useWindowPosition.ts
src/lib/: adaptiveController.ts  emojiParser.tsx  mentionParser.tsx  messageParser.tsx
src/stores/: sessionStore.ts
src/utils/: textUtils.ts
(+4 files in other folders)
